# cpp-mtp-practice

./: .gitattributes  .gitignore  README.md
par_code_cpp/: CMakeLists.txt  Makefile  common.cc  fractal_par.cc  pcc_par.cc
resources/ref/: fracout_1024.tga  fracout_2048.tga  fracout_4096.tga  fracout_8192.tga
seq_code_c/: Makefile  fractal_seq.c  generate.c  pcc_seq.c
seq_code_c/lib/: common.c
seq_code_cpp/: CMakeLists.txt  Makefile  common.cc  fractal_seq.cc  pcc_seq.cc
